--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div>
       <button id="congBtn">Cộng +</button>
-      <button id="truBtn" onclick="tru()">Trừ -</button>
+      <button id="truBtn">Trừ -</button>
     </div>
     <div>
       <p>Kết Quả: <span id="result"></span></p>
